# ChangeLog for net-proxy/ziproxy
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/ziproxy/ChangeLog,v 1.25 2010/04/13 10:23:43 flameeyes Exp $

  13 Apr 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  files/ziproxy-2.7.2-libpng14.patch:
  Fix broken patch (bug #312947).

  08 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> ziproxy-2.7.2.ebuild,
  +files/ziproxy-2.7.2-libpng14.patch:
  Fix building with libpng14.

*ziproxy-2.7.2 (17 Dec 2009)

  17 Dec 2009; Stefan Briesenick <sbriesen@gentoo.org>
  +ziproxy-2.7.2.ebuild, metadata.xml:
  version bump, added russian docs with LINGUAS=ru

*ziproxy-2.7.1 (22 Sep 2009)

  22 Sep 2009; Alin Năstac <mrness@gentoo.org> -ziproxy-2.5.2.ebuild,
  -ziproxy-2.6.9_beta.ebuild, +ziproxy-2.7.1.ebuild:
  Version bump and ~ppc keyword addition (#285878).

*ziproxy-2.7.0 (09 May 2009)

  09 May 2009; Alin Năstac <mrness@gentoo.org> +ziproxy-2.7.0.ebuild:
  Version bump (#268855).

*ziproxy-2.6.9_beta (06 Mar 2009)

  06 Mar 2009; Alin Năstac <mrness@gentoo.org> -ziproxy-2.5.1.ebuild,
  +ziproxy-2.6.9_beta.ebuild:
  Version bump wrt security bug 261210.

  14 Jul 2008; Stefan Briesenick <sbriesen@gentoo.org> files/ziproxy.initd:
  finally fixed init-sript for OpenRC.

*ziproxy-2.5.2 (08 Jul 2008)

  08 Jul 2008; Alin Năstac <mrness@gentoo.org> -files/ziproxy-2.4.confd,
  -files/ziproxy-2.4.initd, -files/ziproxy-2.5.confd,
  -files/ziproxy-2.5.initd, +files/ziproxy.confd, +files/ziproxy.initd,
  -ziproxy-2.4.3.ebuild, ziproxy-2.5.1.ebuild, +ziproxy-2.5.2.ebuild:
  Remove old version. Version bump. Fix init script (#231005).

  16 Mar 2008; Stefan Briesenick <sbriesen@gentoo.org>
  -files/ziproxy-2.3.0.diff, -files/ziproxy-2.3.confd,
  -files/ziproxy-2.3.initd, -ziproxy-2.3.0.ebuild, -ziproxy-2.4.0.ebuild:
  removed old versions.

*ziproxy-2.5.1 (16 Mar 2008)

  16 Mar 2008; Stefan Briesenick <sbriesen@gentoo.org>