@@ -1,6 +1,11 @@
 # ChangeLog for net-proxy/ziproxy
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/ziproxy/ChangeLog,v 1.25 2010/04/13 10:23:43 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/ziproxy/ChangeLog,v 1.26 2010/06/15 15:09:59 ssuominen Exp $
+
+*ziproxy-3.1.1 (15 Jun 2010)
+
+  15 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> +ziproxy-3.1.1.ebuild:
+  Version bump wrt #324021.
 
   13 Apr 2010; Diego E. Pettenò <flameeyes@gentoo.org>
   files/ziproxy-2.7.2-libpng14.patch:
